tests/invalid/syntax_err_statement_in_condition.c
int main() {
    while(int a) {
        2;
    }
}
// ERROR: Line 2, Error 2009